Bug 399475 - Multiple creation of the same entity on an entity relationship diagram
Summary: Multiple creation of the same entity on an entity relationship diagram
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.26.0 (KDE Applications 18.08.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-07 09:05 UTC by Ralf Habacker
Modified: 2018-10-08 23:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.26.2 (KDE Applications 18.08.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-10-07 09:05:59 UTC
Dragging an entity from the tree view and dropping it into an entity relationship diagram creates a new widget for the UML object selected from the tree view with a shared UML object

STEPS TO REPRODUCE
1. start umbrello
2. add a entity relation diagram
3. add an entity
4. drag and drop the entity from the tree view

OBSERVED RESULT
The result is that the added widget uses the same UML object as the existing widget 

EXPECTED RESULT
umbrello does not allow dropping a widget with a shared UML object on diagrams (see class diagram). This behavior should be used here also


ADDITIONAL INFORMATION
The failure result is described in bug 158647
Comment 1 Ralf Habacker 2018-10-07 09:10:24 UTC
Git commit 76349a80c2074a2403474dfb44109c1149fb934d by Ralf Habacker.
Committed on 07/10/2018 at 09:09.
Pushed by habacker into branch 'Applications/18.08'.

Fix 'Multiple creation of the same entity on an entity relationship diagram'
FIXED-IN:2.26.3 (KDE Applications 18.08.3)

M  +3    -1    umbrello/model_utils.cpp

https://commits.kde.org/umbrello/76349a80c2074a2403474dfb44109c1149fb934d