Fix 'Multiple creation of the same entity on an entity relationship diagram'

BUG:399475
FIXED-IN:2.26.3 (KDE Applications 18.08.3)